--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,8 +24,11 @@ jobs:
     - name: Subir banco de dados
       run: docker compose up -d postgres
 
-    - name: Lint
-      run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v8
+      with:
+          version: v2.1
+          args: controllers/ database/ models/ routes/
 
     - name: Testes
       run: go test -v main_test.go
